welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:-32: error: Unmatched closing brace '}' ignored here
	}
        ^MethodsDogHouse:-28: error: illegal start of statement (no modifiers allowed here)
	override def left() {
        ^MethodsDogHouse:5: error: ')' expected but '}' found.
	}
        ^MethodsDogHouse:6: error: ';' expected but ')' found.
	) 
        ^