welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
dogHouse(
	for (x <- 1 to 3) {avance()
		gauche()
		}
	}
	)